# PlotDigitizer

./: .gitattributes  .travis.yml  CHANGELOG.md  Makefile  README.md  helper.py  plotdigitizer.py  pyproject.toml  setup.py
.ci/: Makefile
.github/workflows/: python-app.yml
docs/: INSTALL.md
figures/: graphs_1.png.traj.csv
issues/: Makefile
plotdigitizer/: __init__.py  common.py  geometry.py  grid.py  image.py  locate.py  plot.py  plotdigitizer.py  preprocess.py  trajectory.py
tests/: test_all.py  test_cli.py
